Fix overflow + gradient

--- a/src/web_modules/tops/_style.scss
+++ b/src/web_modules/tops/_style.scss
@@ -1,3 +1,6 @@
+body {
+  overflow: hidden;
+}
 
 .stats_weekly_top {
   position: absolute;
