--- a/src/web_modules/trurank/_style.scss
+++ b/src/web_modules/trurank/_style.scss
@@ -8,7 +8,7 @@
 }
 .top {
   width: 100vw;
-  height: 1045px;
+  height: 245px;
   position: absolute;
   left: 0;
   top: 0;
@@ -120,8 +120,13 @@
   right: 0;
 }
 
+.number_0 {
+  background-color: #8D30F1;
+  height: 80px;
+}
+
 .number_1 {
-  background-color: #AE59E9;
+  background-color: #8F32EE;
   height: 80px;
 }
 
@@ -130,7 +135,7 @@
 }
 
 .number_2 {
-  background-color: #B661DF;
+  background-color: #9235EC;
   height: 80px;
 }
 
@@ -139,7 +144,7 @@
 }
 
 .number_3 {
-  background-color: #BF69D5;
+  background-color: #9538E9;
   height: 80px;
 }
 
@@ -148,22 +153,22 @@
 }
 
 .number_4 {
-  background-color: #C770CC;
+  background-color: #983BE7;
   height: 80px;
 }
 
 .number_5 {
-  background-color: #CF78C2;
+  background-color: #9A3EE4;
   height: 80px;
 }
 
 .number_6 {
-  background-color: #D880B8;
+  background-color: #9D41E2;
   height: 80px;
 }
 
 .number_7 {
-  background-color: #E088AE;
+  background-color: #A043DF;
   height: 80px;
 }
 
@@ -172,19 +177,173 @@
 }
 
 .number_8 {
-  background-color: #E88FA5;
+  background-color: #A346DD;
   height: 80px;
 }
 
 .number_9 {
-  background-color: #F1979B;
+  background-color: #A549DA;
   height: 80px;
 }
 
 .number_10 {
+  background-color: #A84CD8;
+  height: 80px;
+}
+
+.number_11 {
+  background-color: #AB4FD5;
+  height: 80px;
+}
+
+.number_12 {
+  background-color: #AE52D3;
+  height: 80px;
+}
+
+.number_13 {
+  background-color: #B155D1;
+  height: 80px;
+}
+
+.number_14 {
+  background-color: #B357CE;
+  height: 80px;
+}
+
+.number_15 {
+  background-color: #B65ACC;
+  height: 80px;
+}
+
+.number_16 {
+  background-color: #B65ACC;
+  height: 80px;
+}
+
+.number_17 {
+  background-color: #B95DC9;
+  height: 80px;
+}
+
+.number_18 {
+  background-color: #BC60C7;
+  height: 80px;
+}
+
+.number_19 {
+  background-color: #BE63C4;
+  height: 80px;
+}
+
+.number_20 {
+  background-color: #C166C2;
+  height: 80px;
+}
+
+.number_21 {
+  background-color: #C468BF;
+  height: 80px;
+}
+
+.number_22 {
+  background-color: #C76BBD;
+  height: 80px;
+}
+
+.number_23 {
+  background-color: #C96EBA;
+  height: 80px;
+}
+
+.number_24 {
+  background-color: #CC71B8;
+  height: 80px;
+}
+
+.number_25 {
+  background-color: #CF74B5;
+  height: 80px;
+}
+
+.number_26 {
+  background-color: #D277B3;
+  height: 80px;
+}
+
+.number_27 {
+  background-color: #D57AB1;
+  height: 80px;
+}
+
+.number_28 {
+  background-color: #D77CAE;
+  height: 80px;
+}
+
+.number_29 {
+  background-color: #DA7FAC;
+  height: 80px;
+}
+
+.number_30 {
+  background-color: #DD82A9;
+  height: 80px;
+}
+
+.number_31 {
+  background-color: #E085A7;
+  height: 80px;
+}
+
+.number_32 {
+  background-color: #E288A4;
+  height: 80px;
+}
+
+.number_33 {
+  background-color: #E88D9F;
+  height: 80px;
+}
+
+.number_34 {
+  background-color: #EB909D;
+  height: 80px;
+}
+
+.number_35 {
+  background-color: #ED939A;
+  height: 80px;
+}
+
+.number_36 {
+  background-color: #F09698;
+  height: 80px;
+}
+
+.number_37 {
+  background-color: #F39995;
+  height: 80px;
+}
+
+.number_38 {
+  background-color: #F69C93;
+  height: 80px;
+}
+
+.number_39 {
   background-color: #F99F91;
   height: 80px;
 }
+
+.number_40 {
+  background-color: #F99F91;
+  height: 80px;
+}
+
+
+
+
 
 .light {
   opacity: .75;
