--- a/src/web_modules/whatis/_style.scss
+++ b/src/web_modules/whatis/_style.scss
@@ -59,7 +59,7 @@
 .warning_whatis {
   text-align: center;
   position: absolute;
-  bottom: -1vh;
+  bottom: 0vh;
   left: 50%;
   transform: translateX(-50%);
 }
